@@ -5,5 +5,7 @@ README
 lib/App/DoubleUp.pm
 bin/doubleup
 t/01_creation.t
+t/02_split.t
 t/doubleuprc
 META.yml
+test.sql
