@@ -1,0 +1,5 @@
+CREATE TABLE IF NOT EXISTS `test` (
+   `test` INT
+);
+SELECT 1 FROM `test`;
+SELECT 2 FROM `test`;
